// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PersonaDialoguePrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "
상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > leaves optional blocks out for the rich variant 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
장면 전개는 인물 간 긴장/목표/갈등이 드러나도록 구성하라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "
상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.",
  "user": "
상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders each background line alone 1`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders each background line alone 2`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
태그: 학원, 봄",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders each background line alone 3`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
배경 설명: 오래된 교실
창이 크다
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders empty persona text, partial grounding and blank inputs 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
[]
이름 없는 페르소나

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders empty persona text, partial grounding and blank inputs 2`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[이 장면의 확정 사실]
- 장소: 교실


이전 장면:
앞 장면.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders empty persona text, partial grounding and blank inputs 3`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "
상황:


위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders empty persona text, partial grounding and blank inputs 4`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "[이 장면의 확정 사실]
- 사건: 편지 발견
- 장소: 교실
- 관계: 경계
- 시점: 방과 후

등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

이전 장면:
앞 장면.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
시점 화자의 내면 독백(생각·판단·자기합리화·감정)을 대사 사이에 충분히 녹여라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
장르·톤: 청춘
문체 제약: 간결체
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 무근거 부활 금지
이 장면의 시점 인물: 엘리아 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[이 장면의 확정 사실]
- 사건: 편지 발견
- 장소: 교실
- 관계: 경계
- 시점: 방과 후

등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

이전 장면:
앞 장면 끝.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
장면 전개는 인물 간 긴장/목표/갈등이 드러나도록 구성하라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
시점 화자의 내면 독백(생각·판단·자기합리화·감정)을 대사 사이에 충분히 녹여라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
장르·톤: 청춘
문체 제약: 간결체
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 무근거 부활 금지
이 장면의 시점 인물: 엘리아 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[이 장면의 확정 사실]
- 사건: 편지 발견
- 장소: 교실
- 관계: 경계
- 시점: 방과 후

등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

이전 장면:
앞 장면 끝.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "[이 장면의 확정 사실]
- 사건: 편지 발견
- 장소: 교실
- 관계: 경계
- 시점: 방과 후

등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

이전 장면:
앞 장면 끝.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge omniscient 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge omniscient 2`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge retrospective 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
시점 화자의 내면 독백(생각·판단·자기합리화·감정)을 대사 사이에 충분히 녹여라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge retrospective 2`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge undefined 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge undefined 2`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge witnessed 1`] = `
{
  "system": "주어진 상황을 한 편의 소설 장면으로 극화하라. 대화만 뽑지 말고, 인물이 그 자리에 어떻게·언제 오게 됐는지(이동·도착·시간 경과)와 공간·행동을 서술로 그린 뒤 대사를 엮어라.
대화는 '캐릭터명: 대사' 형식을 사용하라.
행동, 표정, 감정을 함께 서술하라.
대사가 적거나 없는 행동·전환 비트(혼자 걷는 길, 잠긴 문, 문이 열리는 순간 등)도 생략하지 말고 장면으로 충실히 그려라.
이전 장면과 시간·장소·등장인물이 바뀌면 그 전환(이동·시간 경과·도착)을 먼저 묘사하고, 이어지는 장면이면 도입을 반복하지 말고 자연스럽게 연결하라.
앞 대목에서 이미 그 자리에 있는 인물을 다시 도착시키거나 다시 맞이하게 하지 마라. 이미 나눈 인사·질문·확인을 되풀이하지 말고, 끝난 지점의 다음부터 써라.
인물의 성격·사연·감정은 한꺼번에 설명하지 말고 행동과 대사로 조금씩 드러내며 장면이 진행될수록 긴장을 쌓아라.
상황과 페르소나에 주어진 사실만 사용하고, 입력에 없는 새로운 사건·설정·인물·배경을 지어내지 마라.
각 인물은 자신이 직접 겪었거나 이전 장면에서 알게 된 정보만 안다. 다른 인물의 페르소나에만 적힌 사실(직업·과거·비밀 등)을 당사자가 밝히기 전에 알거나 언급하게 하지 마라.
상황에서 이름만 언급되거나 아직 도착하지 않은(앞으로 올) 인물은 그 장면에 등장시키거나 대사를 주지 마라. 실제로 그 자리에 있는 인물만 다뤄라.
상황에 인물의 폭언·별칭·직접 대사가 드러나면 순화하거나 화해로 덮지 말고 그 표현을 그대로 살려 대사로 옮겨라.
시점 화자의 내면 독백(생각·판단·자기합리화·감정)을 대사 사이에 충분히 녹여라.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;

exports[`PersonaDialoguePrompt golden > renders the interiority line for knowledge witnessed 2`] = `
{
  "system": "페르소나 기반 장면 작성. 형식: '캐릭터명: 대사'. 행동/감정도 포함.
배경 설명: 오래된 교실
창이 크다
태그: 학원, 봄",
  "user": "등장 캐릭터 페르소나:
[엘리아]
나는 침착하다.
말수가 적다.
[준]
나는 성급하다.

상황:
엘리아가 문을 연다.
준이 뒤따른다.

위 상황에서 캐릭터들의 대화와 행동을 작성하라.",
}
`;
